styles/contact-dialog.css
dialog {
  margin: auto;
  border: none;
  border-radius: 20px;
  padding: 0;
  transform: translate(120%, 0);
  transition: transform 0.3s ease-out;
}

dialog.show {
  transform: translate(0, 0);
}

dialog::backdrop {
  background: rgba(0, 0, 0, 0.3);
}

.dialog {
  width: 1212px;
  height: 592px;
  background: #fff;
  border-radius: 8px;
  display: flex;
}

/* Left */
.dialog-left {
  background: #2a3647;
  color: white;
  width: 38.5%;
  padding: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.logo {
  width: 55px;
  margin-bottom: 20px;
}

.dialog-left h1 {
  margin: 0;
  font-size: 61px;
}

.dialog-left p {
  font-size: 27px;
  margin: 8px 0;
}

.underline {
  width: 90px;
  height: 3px;
  background: #29abe2;
  margin-top: 10px;
}

/* Right */
.actions {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding-left: 80px;
  width: calc(100% - 120px);
  margin-bottom: 80px;
}

.dialog-right {
  width: 60%;
  padding-left: 83px;
  padding-right: 48px;
  position: relative;
  display: flex;
  align-items: center;
}

.close-btn {
  background: transparent;
  border: none;
  cursor: pointer;
  margin-bottom: 60px;
  width: 30px;
  height: 30px;
  padding: 0;
  align-self: end;
  display: flex;
  align-items: center;
  justify-content: center;
}

.close-btn:hover {
  background-color: #eeeeee;
  border-radius: 50%;
}

.avatar-profile {
  width: 120px;
  height: 120px;
  margin-bottom: 32px;
}

.dialog-detail-avatar {
  margin-bottom: 32px;
}

/* Inputs */
.input-wrapper {
  width: 100%;
  position: relative;
}

input {
  width: 100%;
  padding: 0 0px 0 21px;
  margin-bottom: 32px;
  border-radius: 8px;
  border: 1px solid #ccc;
  font-size: 14px;
  height: 50px;
  box-sizing: border-box;
}

input::placeholder {
  opacity: 0.5;
  font-size: 20px;
}

input:focus {
  border: 2px solid #70c7eb;
  outline: none;
}

.input-wrapper img {
  position: absolute;
  right: 21px;
  top: 25%;
  transform: translatey(-50%);
  width: 18px;
  pointer-events: none;
}

/* Buttons */
.action-btns {
  display: flex;
  gap: 24px;
  margin-top: 16px;
  height: 57px;
}

.cancel-btn,
.delete-btn {
  background: white;
  border: 1px solid #2a3647;
  padding: 10px 15px;
  border-radius: 8px;
  cursor: pointer;
  font-size: 20px;
}

.cancel-btn:hover,
.delete-btn:hover {
  color: #70c7eb;
  border: 3px solid #70c7eb;
  box-shadow: 0 4px 3px 0px rgba(0, 0, 0, 0.5);
  box-sizing: border-box;
}

.delete-btn {
  width: 113px;
}

.cancel-btn {
  width: 126px;
}

.create-btn {
  background: #2a3647;
  color: white;
  border: none;
  padding: 10px 15px;
  border-radius: 8px;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  width: 214px;
}

.create-btn:hover {
  background: #29abe2;
  border: 2px solid #29abe2;
  box-shadow: 0 4px 3px 0px rgba(0, 0, 0, 0.5);
}

.save-btn {
  width: 111px;
}

.contact-created {
  position: absolute;
  margin-top: 70px;
  background-color: #2a3647;
  color: white;
  font-size: 20px;
  border-radius: 20px;
  height: 74px;
  width: 326px;
  display: flex;
  justify-content: center;
  align-items: center;
  transform: translateX(200%);
  opacity: 0;
  transition:
    transform 0.3s ease,
    opacity 0.3s ease;
}

.contact-created.slide-in {
  transform: translateX(0);
  opacity: 1;
}

